--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>Hzhren.GitHub.io by hzhren</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/index.css" media="screen">
 </head>
 <body>
 <section class="page-header">
@@ -15,18 +13,15 @@
     <h2 class="project-tagline">hzhrenのriver</h2>
     <h2 class="project-tagline">to find something which had faded away</h2>
 </section>
-
-<section class="main-content">
-    <button>Animetion</button>
-    <button>积累</button>
-    <button>随笔</button>
-    <a href="">0-1热身运动</a>
-    <a href="">2-1图片随鼠标展现</a>
-    <footer class="site-footer">
-    </footer>
-
-</section>
-
-
+<div class="m-demo">
+    <div class="box">
+        <div class="top">top</div>
+        <div class="bottom">bottom</div>
+        <div class="left">left</div>
+        <div class="right">right</div>
+        <div class="front">front</div>
+        <div class="back">back</div>
+    </div>
+</div>
 </body>
 </html>
