--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/index.css" media="screen">
 </head>
 <body>
-<section class="page-header">
-    <h1 class="project-name">Hzhren.GitHub.io</h1>
-    <h2 class="project-tagline">hzhrenのriver</h2>
-    <h2 class="project-tagline">to find something which had faded away</h2>
+<section class="watermark">
+    <div class="project-name">Hzhren.GitHub.io</div>
+    <div class="project-tagline">hzhrenのriver</div>
+    <div class="project-tagline">to find something which had faded away</div>
 </section>
 <div class="m-demo">
     <div class="box">
