itle:16-08-17-00 Description:none

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <section class="watermark">
     <div class="project-name">Hzhren.GitHub.io</div>
     <div class="project-tagline">hzhrenのriver</div>
-    <div class="project-tagline">to find something which had faded away</div>
+    <div class="project-saySomething">to find something which had faded away</div>
 </section>
 <div class="m-demo">
     <div class="box">
