--- a/index.html
+++ b/index.html
@@ -23,5 +23,23 @@
         <div class="back">back</div>
     </div>
 </div>
+<script src="javascript/jquery-3.1.0.min.js"></script>
+<script>
+    $(
+            function(){
+                var top=$('.top');
+                var bottom=$('.bottom');
+                var left=$('.left');
+                var right=$('.right');
+                var front=$('.front');
+                var back=$('.back');
+                top.on('click',function(){
+                    window.location='../demo/JS/2-1.html'
+                })
+
+            }
+    )
+
+</script>
 </body>
 </html>
