--- a/demo/JS/2-1.html
+++ b/demo/JS/2-1.html
@@ -17,7 +17,7 @@
                     len = 110,
                     str = '';
             for (var i = 0; i < len; i++) {
-                str += '<div style="opacity: 0.2; transition: 0.5s; width: 50px; height: 50px; position: absolute; top: ' + Math.floor(i / 10) * 52 + 'px; left: ' + i % 10 * 52 + 'px; background: url(img-2/pic.jpg) ' + (-i % 10 * 52) + 'px ' + (-Math.floor(i / 10) * 52) + 'px"></div>';
+                str += '<div style="opacity: 0.2; transition: 0.5s; width: 50px; height: 50px; position: absolute; top: ' + Math.floor(i / 10) * 52 + 'px; left: ' + i % 10 * 52 + 'px; background: url(../../image/pic.jpg) ' + (-i % 10 * 52) + 'px ' + (-Math.floor(i / 10) * 52) + 'px"></div>';
             }
             oWrap.innerHTML = str;
             for (var i = 0; i < aDiv.length; i++) {
