Title:16-08-18-01 Description:none

--- a/demo/JS/js_index.html
+++ b/demo/JS/js_index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>js相关</title>
+    <title>js魔法小镇</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/js_.css" media="screen">
 </head>
 <body>
-<nav>
-
+<nav class="head-title">
+JS Magic Town
 </nav>
 </body>
 </html>
