js magic town Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 var front=$('.front');
                 var back=$('.back');
                 top.on('click',function(){
-                    window.location='/demo/JS/2-1.html'
+                    window.location='/demo/JS/html/2-1.html'
                 })
 
             }
