--- a/demo/JS/js_index.html
+++ b/demo/JS/js_index.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <title>js魔法小镇</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/js_.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../../stylesheets/normalize.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="MagicTown.css" media="screen">
+    <link href='//cdn.webfont.youziku.com/webfonts/nomal/89979/45817/57b51e18f629d805cc461af9.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
 <nav class="head-title">
-JS Magic Town
+    <span>
+        JS Magic Town
+    </span>
 </nav>
+
+<!--毛玻璃层-->
+<div class="glass-layer"></div>
+<div class="view-layer">
+    <div class="js-link">
+        <div>
+            <ul>
+                <li><a href="html/2-1.html">图片随鼠标展现</a></li>
+                <li>图片随鼠标展现</li>
+                <li>图片随鼠标展现</li>
+                <li>图片随鼠标展现</li>
+                <li>图片随鼠标展现</li>
+            </ul>
+        </div>
+        <div>
+            <ul>
+                <li>图片随鼠标展现</li>
+                <li>图片随鼠标展现</li>
+                <li>图片随鼠标展现</li>
+                <li>图片随鼠标展现</li>
+                <li>图片随鼠标展现</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
